fluent-bit-cloudwatch.yml
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled

kind: ConfigMap
apiVersion: v1
metadata:
  name: aws-logging
  namespace: aws-observability
data:
  output.conf: |
    [OUTPUT]
        Name  cloudwatch_logs
        Match   *
        region  ap-south-1
        log_group_name  fluent-bit-cloudwatch
        log_stream_prefix  from-fluent-bit-
        auto_create_group  true
