deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name : apache-deployment
spec:
  replicas: 2
  selector:
     matchLabels:
         app: apache
  template:
     metadata:
       labels:
         app: apache
     spec:
       containers: 
         - name: apache
           image: httpd
           ports: 
             - containerPort: 8080
         - name: mysql
           image: mysql:latest
           ports:
             - containerPort: 3306
