deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: nginx-demo
   namespace: microservice
spec:
  replicas: 1
  selector:
     matchLabels:
         app: nginx
  template:
      metadata:
         labels: 
            app: nginx
      spec:
        containers:
         - name: nginx
           image: nginx:latest
           ports:
             - containerPort: 80
