service.yml
apiVersion: v1
kind: Service
metadata: 
   name: nginx-service
spec:
  selector:
     app: nginx
  type: NodePort
  ports:
   - protocol: TCP
     port: 8080
     targetPort: 80
     nodePort: 30000
