ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
   name: application-ingress
   annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      -  path: /apache
         pathType: Prefix
         backend:
            service:
              name: apache-service
              port:
                number: 80
      -  path: /nginx
         pathType: Prefix
         backend:
           service:
              name: nginx-service
              port: 
                number: 8080
